<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/testDLTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:text="@string/testDLText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/koryavaya_podlozhka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/testDLTextView"
            app:srcCompat="@drawable/koryavaya_podlozhka"
            android:contentDescription="@string/backgroundDL" />

        <ImageView
            android:id="@+id/qrCode"
            android:layout_width="121dp"
            android:layout_height="114dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/qrcodeDL"
            app:layout_constraintBottom_toBottomOf="@+id/koryavaya_podlozhka"
            app:layout_constraintEnd_toEndOf="@+id/koryavaya_podlozhka"
            app:layout_constraintStart_toStartOf="@+id/koryavaya_podlozhka"
            app:layout_constraintTop_toTopOf="@+id/koryavaya_podlozhka"
            app:srcCompat="@drawable/content_qr1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>