<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="voteAnswers"
            type="com.example.testverstka.VoteAnswers"/>
    </data>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/vote1Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/rectangle_rounded_all"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgVote1"
                android:layout_width="match_parent"
                android:layout_height="91dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1.5"
                android:contentDescription="@string/imgvote1"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ilove" />

            <TextView
                android:id="@+id/descTextVote1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:gravity="center|start|fill"
                android:text="@{voteAnswers.voteAns1}"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/percVote1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1.75"
                android:gravity="center"
                android:text="@{voteAnswers.voteAnsPerc1}"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vote2Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/rectangle_rounded_all"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgVote2"
                android:layout_width="match_parent"
                android:layout_height="91dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1.5"
                android:contentDescription="@string/imgvote2"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/kids" />

            <TextView
                android:id="@+id/descTextVote2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:gravity="center|start|fill"
                android:text="@{voteAnswers.voteAns2}"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/percVote2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1.75"
                android:gravity="center"
                android:text="@{voteAnswers.voteAnsPerc2}"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/vote3Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/rectangle_rounded_all"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgVote3"
                android:layout_width="match_parent"
                android:layout_height="91dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1.5"
                android:contentDescription="@string/imgvote3"
                app:srcCompat="@drawable/topi" />

            <TextView
                android:id="@+id/descTextVote3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:gravity="center|start|fill"
                android:text="@{voteAnswers.voteAns3}"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/percVote3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1.75"
                android:gravity="center"
                android:text="@{voteAnswers.voteAnsPerc3}"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>


</layout>